--- a/package.json
+++ b/package.json
@@ -1,18 +1,26 @@
 {
   "name": "ectomapper",
+  "author": "Enio E. Zanatta (zayez)",
   "version": "1.0.0",
-  "main": "index.js",
+  "description": "An automapper for TypeScript.",
+  "license": "MIT",
+  "keywords": [
+    "automapper"
+  ],
+  "main": "dist/index.js",
+  "types": "dist/index.d.ts",
   "scripts": {
+    "build": "tsc",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "description": "",
+  "files": [
+    "dist/**/*"
+  ],
   "devDependencies": {
     "typescript": "^5.5.4"
   },
   "dependencies": {
+    "@types/lodash": "^4.17.7",
     "lodash": "^4.17.21"
   }
 }
