--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "ectomapper",
+  "type": "module",
   "author": "Enio E. Zanatta (zayez)",
   "version": "1.0.0",
   "description": "An automapper for TypeScript.",
@@ -8,19 +9,22 @@
     "automapper"
   ],
   "main": "dist/index.js",
-  "types": "dist/index.d.ts",
+  "types": "@types/index.d.ts",
   "scripts": {
     "build": "tsc",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "glob -c \"tsx --test\" \"./src/test/**/*.test.ts\""
   },
   "files": [
     "dist/**/*"
   ],
   "devDependencies": {
+    "@types/lodash-es": "^4.17.12",
+    "@types/node": "^22.4.1",
+    "glob": "^11.0.0",
+    "tsx": "^4.17.0",
     "typescript": "^5.5.4"
   },
   "dependencies": {
-    "@types/lodash": "^4.17.7",
-    "lodash": "^4.17.21"
+    "lodash-es": "^4.17.21"
   }
 }
