--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,7 +1,8 @@
 {
   "compilerOptions": {
     "target": "ESNext",
-    "moduleResolution": "classic",
+    "moduleResolution": "bundler",
+    "module": "preserve",
     "outDir": "dist",
     "declaration": true,
     "sourceMap": true,
@@ -12,6 +13,6 @@
     "forceConsistentCasingInFileNames": true
   },
   "lib": [""],
-  "include": ["src/**/*", "test/**/*"],
+  "include": ["src/**/*", "@types/**/*"],
   "exclude": ["node_modules", "test/**/*"]
 }
